# canary

./: .gitignore  README.md  client.py  monitor_logfile.py  mygo  netconf-console.py  netconf-console_original.py  netconf_comm.py  parse_xml.py
Great_ATuin/: hello_flask.py
Great_ATuin/templates/: 404.html  user.html
canary_2/: README.md  analyzer.py  config.yaml  connection.py  framework.py
dut_ctrl/: cli_control.py  client.py  common_enums.py  config.ini  fixtures.py  netconf_comm.py  packet_creator.py  parse_cli.py  parse_xml.py  server.py  setup_dut.py  snmp_comm.py  test_init.py  test_suite_acl.py  tx_into_bcm.py
dut_ctrl2/: hello_flask.py
great_atuin/: Cargo.toml  build.rs  isis_for_simulator.cfg  isis_neighbor_simulator.py  mysync.sh
great_atuin/isis_neighbor_simulator__Python/: isis_neighbor_simulator.py
great_atuin/src/: main.rs
great_atuin/templates/: 404.html  base.html  user.html
great_atuin/website/: hello_flask.py
history_files/: monitor_logfile.py  netconf-console_original.py  setup_dut.py  snmp_comm.py  test_investigate.py
jenkins/: README.md  config.xml
netconf/: netconf_comm.py
old/: snmp_comm.py
scapy_mockups/: arp.py  dhcp.py  icmp.py  igmp.py  isis_hello.py  lacp.py  ldp.py  rsvp.py  rsvp_2.py  vlan.py
tate/: app.py  example.php
utilities/: config.yaml  mysync.sh  proxy_scp.py  scp_proxy.sh
utility/: dev_machine_cli.py  dev_machine_connection.py  dut_monitor.py  dut_monitor_FSM.py  fsm.py  vpn_con.py  vpn_con_FSM.md  vpn_con_FSM.py  vpn_gui.py
vpn_connection/: dut_monitor.py  vpn_con.py  vpn_gui.py
(+7 files in other folders)
