[package]
name = "isis-neighbor-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "1.1.0"
pnet = { version = "0.33.0", features = ["std"] }
hex = "0.4.3"
log = "0.4"
env_logger = { version = "0.10", default-features = false, features = ["auto-color", "humantime"] }
slog = "2.7"
slog-term = "2.9"
slog-async = "2.8"
ctrlc = "3.4"
thiserror = "1.0"
chrono = "0.4"



[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"]
