[package]
name = "frame_sender"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "1.3.0"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[target.'cfg(target_env = "musl")']
rustflags = ["-C", "target-feature=+crt-static"]

[target.x86_64-unknown-linux-musl]
linker = "musl-gcc"